# re-tasks

berkeley/: makefile
decode/: .gitignore  makefile
lempel-ziv/: makefile
nowhere/: makefile
puzzle/: .gitignore  makefile
s_expr/: CMakeLists.txt  main.cpp
x87/: makefile
